--- a/设计模式.md
+++ b/设计模式.md
@@ -2,56 +2,82 @@
 
 ##创建型模式
 
-###1.单例模式
+ * 单例模式
     
-    全局生成唯一的实例
+       全局生成唯一的实例
     
-###2.工厂方法模式
+ * 原型模式
     
-    工厂方法模式定义了一个创建对象的接口，但由子类决定要实例化的类是哪一个，也就是说工厂方法模式让实例化推迟到子类。
+       指的是统一类对应不同的实例,彼此互不影响。
     
-    通常我们自定义具体的实现类就是用到该模式
+ * 工厂方法模式
     
-###3.抽象工厂模式
+       工厂方法模式定义了一个创建对象的接口，但由子类决定要实例化的类是哪一个，也就是说工厂方法模式让实例化推迟到子类。
     
-    工厂方法模式只能生成一个产品,当一个工厂可以生产多件产品时就是抽象工厂模式模式
+       通常我们自定义具体的实现类就是用到该模式
+    
+ * 抽象工厂模式
+    
+       工厂方法模式只能生成一个产品,当一个工厂可以生产多件产品时就是抽象工厂模式模式
 
-###4.建造者模式
+ * 建造者模式
     
-    指将一个复杂对象的构造与它的表示分离,使同样的构建过程可以创建不同的表示,这样的设计模式被称为建造者模式。
-    比如POJO的Builder构建
-
-###5.原型模式
+       指将一个复杂对象的构造与它的表示分离,使同样的构建过程可以创建不同的表示,这样的设计模式被称为建造者模式。
+       比如POJO的Builder构建
 
 ##构造性模式
 
-###6.适配器模式
+ * 适配器模式
      
-     适配器的作用就是一座桥梁, 将原本不互通的两个接口通过适配器实现互通。
+       适配器的作用就是一座桥梁, 将原本不互通的两个接口通过适配器实现互通。
+       Callable对Runnable的适配
 
-###7.桥接模式
+ * 桥接模式
+       
+ * 组合模式
+       
+ * 装饰模式
+    
+       指的是将目标对象进行进一层的封装,原有目标方法不变,通过装饰类添加了新的功能。
+    
+ * 外观模式
+    
+       指将一些列复杂的对象封装成一个简单的对象供使用者调用。
+       在使用者看来操作是简单的,屏蔽了内部的复杂性。
 
-###8.组合模式
+ * 亨元模式
+       
+ * 代理模式
+    
+       目标对象不直接面向调用者,而是面向代理对象,调用者通过调用代理对象,代理对象调用目标对象。
+       代理对象可以定义一系列的行为操作来改变调用逻辑。
 
-###9.装饰模式
-
-###10.外观模式
-
-###10.亨元模式
-
-###10.代理模式
+###行为模式
     
-    目标对象不直接面向调用者,而是面向代理对象,调用者通过调用代理对象,代理对象调用目标对象。
-    代理对象可以定义一系列的行为操作来改变调用逻辑。
+ * 模板模式
     
-###11.模板模式
+       规定了具体的流程,具体的实现由子类去实现
     
-    规定了具体的流程,具体的实现由子类去实现
+ * 策略模式
     
-###12.策略模式
+       指一个接口存在多个实现类, 通过接口的方式引入并进行方法调用。
+       接口的具体实现通过具体的方法传入。每次只能使用该接口的一个版本。
     
-    该模式定义了一系列算法,并将每个算法封装起来,使它们可以相互替换,且算法的变化不会影响使用算法的客户。
+ * 责任链模式
     
-###13.责任链模式
+       通过指定一系列的逻辑顺序执行,套娃模式、子类重写父类方法再并调用父类方法
     
-    通过指定一系列的逻辑顺序执行,套娃模式、子类重写父类方法再并调用父类方法
+ * 观察者模式
+       
+       发布订阅模式
+ 
+ * 迭代器模式
+        
+        遍历
+ 
+ * 命令模式
+        
+ * 状态模式      
+    
+    
+###策略模式、装饰模式、适配器模式、代理模式的区别
