--- a/高频面试考点.md
+++ b/高频面试考点.md
@@ -1055,3 +1055,16 @@
         
         数据预热,提前加载至内存。redis超卖回补。
         通过MQ执行
+        
+###如何保证数据一致性(两个方面)
+ 
+ * 缓存一致性
+        
+        
+ * 分布式事务调用
+ 
+###分布式锁的使用和实现原理
+ 
+ * 
+ 
+ *
