--- a/高频面试考点.md
+++ b/高频面试考点.md
@@ -903,6 +903,12 @@
         计算密集型程序适合C语言多线程，I/O密集型适合脚本语言开发的多线程。
         
 ###三十六、分布式事务
+
+ * XA协议和TCC协议的区别
+       
+        XA是一种规范,由数据库定义的顶层接口, 2PC和3PC是对它的实现, 由数据库实现，会对资源加锁实现 
+        TCC也是一种规范,由业务去实现,通过预留资源实现, 不会占用数据库资源
+ * 
  
  * 什么是分布式事务
         
