--- a/面试题库.md
+++ b/面试题库.md
@@ -316,5 +316,15 @@ ConcurrentHashMap如何保证读写安全的
 * 本地事务表
 * 事务消息
 
+### 限流算法
+
+* 漏桶算法
+* 令牌桶算法
+* 滑动窗口算法
+
+### 分布式锁
+
+* redis分布式锁
+* zookeeper分布式锁
 
       
