--- a/高频面试考点.md
+++ b/高频面试考点.md
@@ -1,11 +1,11 @@
 ## JAVA面试
 
-###一、JAVA内存模型、volatile、缓存一致性
+### 一、Java内存模型、Java缓存一致性问题、volatile
 
  * 缓存一致性问题
         
-        高速缓存的引入解决了处理器与内存之前的矛盾,但是如何保证各个缓存中的数据的正确性就是所谓的缓存一致性问题
-        因为各个高速缓存都只和主存打交道,缓存间的数据是不通信的,就可能导致各个高速缓存和主存数据存在不一致问题
+        通过引入高速缓存解决了处理器与主内存之间速度不匹配的问题,但同时也带来了缓存与主内存之间数据不一致的问题。
+        Java中的每个线程都有自己的工作内存(类似于高速缓存区), 也存在缓存一致性问题。
         
  * JAVA内存模型
         
@@ -46,7 +46,7 @@
         
         这些内存屏障保证了变量在使用时必须从主存中进行加载,使用后必须写入主存,类似原子性操作
         同时指定了只有两个屏障间的代码可以重排序,不能跨屏障重排序
-###二、synchronized和lock
+### 二、synchronized和lock
 
  * synchronized
     
@@ -59,7 +59,7 @@
         lock是可重入的互斥锁,引入了公平锁和响应中断的实现
         lock锁的出现主要是为了弥补jdk1.6前synchronized锁的缺陷,同时提供了更丰富的API,包括尝试获取锁、尝试指定时间获取锁、支持可中断等
         AQS下的condition机制细化了线程的等待与唤醒机制,使得控制更精准
-###三、AQS
+### 三、AQS
 
  * 什么是AQS
  
@@ -96,7 +96,7 @@
         CountDownLatch表示的是主线程必须等待其他线程都完成任务才可以继续执行
         CyclicBarrier表示到达指定的线程数后这些线程才可以执行
         
-###四、ConcurrentHashMap如何保证读写安全的
+### 四、ConcurrentHashMap如何保证读写安全的
 
 * 写安全
         
@@ -116,7 +116,7 @@
         当数据超过阈值的发起扩容,其他线程发现正在扩容时协助扩容
         每个线程通过循环领取扩容任务直至没有扩容任务退出本次扩容任务(数组从右到左领取扩容任务)
         整体扩容完后再次统计是否需要发起新一轮的扩容       
-###五、线程池
+### 五、线程池
 * 原理
 
         添加至线程池中的任务都不会创建线程, 线程池中的线程都是由参数中的线程工厂去创建 
@@ -156,7 +156,7 @@
 * 如何实现一个定时任务线程池
         
         定时任务使用的是延迟队列
-###六、JVM内存模型
+### 六、JVM内存模型
 
  * JVM内存模型
         
@@ -186,7 +186,7 @@
         
         字节码指令,用来记录程序下一个指令的位置 
             
-###七、SpringBean的加载过程
+### 七、SpringBean的加载过程
  * Bean的生命周期(以注解方式为例)
         
         1. 根据@ComponentScan属性来扫描需要被Spring管理的Bean,为每一个类生成一个BeanDefinition对象来存储类的信息
@@ -211,7 +211,7 @@
         AOP是在BeanPostProcessor中实现的 
         通过ProxyFactory代理工厂、Advice(切面)、target(原始对象)来生成代理类
         
-###七、Spring是如何解决循环依赖的
+### 七、Spring是如何解决循环依赖的
  * Spring不能解决哪种类型的循环依赖
         
         只能解决存在单例bean的循环依赖, 原型模式和构造器的循环依赖是无法解决的
@@ -243,7 +243,7 @@
         3. 属性赋值完成后进行AOP(进行过AOP的此步不再进行AOP,通过一个缓存保存了AOP过的对象)
         4. 若对象不是提前进行AOP的,直接加入一级缓存,提前进行AOP的存二级缓存中取出加入一级缓存
         
-###八、SpringMVC流程
+### 八、SpringMVC流程
  * 执行流程
         
         1.WEB容器接收到请求后调用DispatherServlet实现类的service方法
@@ -251,7 +251,7 @@
         3.通过HandlerAdapter确定该处理器的类型并执行处理器,返回ModelAndView
         4.通过视图解析器解析器找到需要的视图进行相关处理
         5.通过model渲染视图并返回给前端
-###九、TCP的三次握手和四次挥手
+### 九、TCP的三次握手和四次挥手
  * TCP报文
         
         TCP是一种可靠性连接,报文结构中存在如下重要字段
@@ -277,7 +277,7 @@
         第三次挥手：服务器发送FIN给客户端表示请求处理完毕
         第四次挥手：客户端接收到后发送ACK给服务器表示接受到,双方都进入关闭状态
         
-###十、MVCC机制、间隙锁
+### 十、MVCC机制、间隙锁
  * 读锁和写锁
         
         学习MVCC机制前我们必须理解MYSQL中的读锁和写锁,MYSQL中的读写锁其实和JAVA中的读写锁类似,MYSQL中的行锁是在聚簇索引中实现的(意味着不走索引只能获取表锁)
@@ -342,14 +342,14 @@
  * 间隙锁的应用场景
         
         生产环境数据出错,需要范围批量修改, 此时必须使用间隙锁, 防止修改期间对新增数据也造成修改       
-###十一、MYBATIS一二级缓存
+### 十一、MYBATIS一二级缓存
 
  * MYBATIS的一二级缓存指什么
     
         一级缓存指SqlSession级别的缓存(默认开启)
         二级缓存指nameSpace级别的缓存(默认关闭, 配置文件设置cacheEnabled=true开启)
         
-###十二、堆外内存、NIO、Netty
+### 十二、堆外内存、NIO、Netty
  * 堆内内存和对外内存
         
         堆内内存只JVM的内存,推外内存指JVM以外的内存  
@@ -379,7 +379,7 @@
         
         
     
-###十三、垃圾收集器
+### 十三、垃圾收集器
  * 判断对象是否可回收算法
         
         引用计数法：判断当前对象被引用数是否为0,该算法无法回收相互引用的两个对象
@@ -412,7 +412,7 @@
  * CMS和G1收集器
         
         
-###十四、设计模式
+### 十四、设计模式
  * 工厂模式(抽象工厂模式)
         
         提供统一的接口定义规范,由不同的实现类去实现, 实现子类的灵活切换      
@@ -451,7 +451,7 @@
  * 策略模式(Spring Security)
         
         
-###十五、Springboot自动装配原理
+### 十五、Springboot自动装配原理
  * 自定义Springboot的starter
         
         1. 创建一个普通的Maven项目(创建的项目不可以有启动类, 否则别的项目依赖时找不到类!!!)    
@@ -477,27 +477,32 @@
         1. @SpringBootApplication中的@EnableAutoConfiguration注解引用了AutoConfigurationImportSelector类,该类提供了如下机制  
         1. Spring启动后会根据API机制扫描/META-INF/spring.factories的内容
         2. 加载需要自动装配的bean至Spring
-###十六、redis缓存一致性问题如何解决
- * redis缓存一致性问题
-        
-        redis用作缓存时无法解决缓存一致性问题的,因为redis更新和mysql更新不是原子操作的,总会造成短暂的不一致       
- * 先删除缓存再更新数据库
-        
-        由于缓存为空,其他线程将数据库的旧数据重新读出再次填入缓存中
- * 先更新数据库再写缓存
-        
-        读线程取到旧数据,但是更新redis时又晚于写线程,使得redis中的数据依旧没造数据
- * 解决方案1 
+
+### 缓存一致性问题
+          
+          缓存一致性问题指的是关系型数据库和缓存数据如何保持一致的的问题。通常有两种实现方式: 强一致性和最终一致性。
  
-        延时双删策略
-        更新前清空redis的缓存,这样可以保证写线程在写redis之前读线程读到正确的数据
-        更新后延迟500ms在删除redis,可以保证防止读线程写redis晚于写线程删redis
+ * 强一致性
         
- * 解决方案2  
+        由于修改数据库和更新缓存是两个操作, 要保证两个操作的一致性, 我们必须借助分布式锁来实现。 具体分为两个场景:
+        1. 缓存失效时需要加锁更新缓存
+        2. 修改数据库时需要加锁进行更新, 同时需要添加事物来支持回滚。 先更新数据库, 在更新缓存, 防止缓存失败时导致的数据不一致问题。
+ * 最终一致性
         
-        基于订阅binlog的同步机制(不做了解)
+        我们可以采用缓存设置过期时间+延迟消息更新的方式来异步更新缓存。
+        当缓存过期和延时消息同时发生时, 有概率导致缓存更新失败。
+
+ * 先更新缓存还是先更新数据库的问题
         
-###十七、mysql的索引结构，索引常见的优化原则
+        缓存不设置过期时间的前提下,
+        无论时先更新数据库, 还是先更新缓存, 在不加锁和事物的情况下, 都可能存在不一致的问题。
+        无论先删缓存, 还是后删缓存, 在并发情况下都可能存在不一致的问题。
+        
+ * 总是为缓存设置过期时间
+
+        给缓存设置一个合理的过期时间,总会实现最终一致性。
+
+### 十七、mysql的索引结构，索引常见的优化原则
  * hash索引和B+tree的区别,为什么选择B+tree
         
         hash索引是一种一对一映射关系的索引,我们可以联想我们的hashmap,但是无法实现范围查找,排序,数据大时hash冲突严重等问题
@@ -523,35 +528,11 @@
         9. 当一个字段的取值范围固定且存在大量重复,使用索引的意义不大
         10. 索引的个数控制在最多六个,不然造成更新效率低且占据空间
         11. 尽量使用数值类型,而不是字符串
-###十八、做项目时遇到过什么难题，怎么解决的
- * 遇到的问题
- 
-        项目一：一个是接手一个没参与过的新项目改造,被告知的需求是加了几个小功能,到现场后是与别的系统合并改造
-        后端开发人员只有我一个,原系统的开发只能提供咨询,不参与开发。只能通过时间去解决,连续工作22天,每天最早九点下班,最后完成任务。
-        期间了解了四个微服务间的关联逻辑, sass不同租户数据库的切换, RocketMQ在项目中的封装和使用, 完成了与两个厂商间的功能对接,配合前端查找前端问题和测试工作等
-        该项目的难点就是完全不了解项目的架构以及功能逻辑就要对接用户系统和案件系统的改造,后台开发自始至终只有一个，时间短，在客户地点办公压力大等
-        
-        项目二：参与一个绩效项目的开发,设计200多张表单的填报,大部分是单表填报,期间被安排去客户现场部署项目,出差一周期间没有开发任务,
-        自己开发了一套基于项目的单表增删改查功能,可一件生成实体、DTO、VO、Controller到xml的全部代码,减少了项目后期的开发量。
-        支持多表、单表、全表、模糊查询
-        设计思路：
-        1. 环境变量(通过配置文件读取)：
-            数据库信息：url、username、password、scheme、tableName
-            字段类型：定义表字段与实体类的类型对应关系
-            生成文件位置信息: 生成的路径、包名
-            控制信息: 文件是否需要引入Date类型、xml中是否需要生成resultMap等
-        
-        2. 定义frameWork模板：
-            包括Controller、DTO、VO、Entity、Mapper、xml、service、serviceimpl等
-        
-        3. 加载环境变量、模板信息、返回一个生成器对象
-        
-        4. 执行生成器的生成方法即可(包装模式)
-        
-        其实就是获取数据库连接拿到所有的表信息,为模板文件赋值
-        
-        
-###十九、MYBATIS框架的原理
+### 做项目时遇到过什么难题，怎么解决的
+
+ * 参考 项目中遇到的问题.md
+  
+### 十九、MYBATIS框架的原理
 * MYBATIS加载流程
         
         1. 加载并解析mybatis的配置文件,生成SqlSessionFactory和Configuration对象, 我们需要关注的只有两点
@@ -577,7 +558,7 @@
         物理分页,拦截器会修改我们的sql,我们的分页方法可以不用写count()方法,拦截器会帮我们自动生成
         
         
-###二十、SpringCloud框架的基本使用
+### 二十、SpringCloud框架的基本使用
 
  * 五大组件
         
@@ -607,23 +588,23 @@
  
         
         配置中心
-###二十一、Dubbo框架的基本使用
+### 二十一、Dubbo框架的基本使用
 
  * Dubbo基本原理 
        
  * 服务暴露原理      
         
-###二十二、RocketMQ使用框架的基本使用
+### 二十二、RocketMQ使用框架的基本使用
 
  * RocketMQ原理
  
  * RocketMQ如何保证消费不出错
  
-###二十三、垃圾回收机制
+### 二十三、垃圾回收机制
 
  *
 
-###二十四、类加载过程
+### 二十四、类加载过程
  * 类从被加载到虚拟机内存到清理出虚拟机内存的生命周期
     
         加载--> 验证--> 准备--> 解析--> 初始化--> 使用--> 卸载
@@ -660,7 +641,7 @@
  * 卸载 
         
         卸载
-###二十五、双亲委派模式和破坏双亲委派
+### 二十五、双亲委派模式和破坏双亲委派
 
  * 类加载器
         
@@ -700,14 +681,14 @@
         
         这也是双亲委派的一个保证,先调用loadClass()通过父类去加载,父类加载不到的话在通过findClass()自己去加载
         
-###二十六、SPI
+### 二十六、SPI
            
  * 什么是SPI
         
         SPI全称Service Provider Interface, 表示服务提供接口, 实现了这么一种机制, 提供了异同统一的调用方式,
         但是具体的实现逻辑由服务提供者自己提供(模板模式),该模式破坏了双亲委派模式
         
-###二十七、如何结束一个线程
+### 二十七、如何结束一个线程
         
  * 设置退出标识
         
@@ -721,18 +702,20 @@
         interrupt() :    设置线程中断标识为true
         isInterrupted() :   返回线程的中断标识
         interrupted() : 返回线程的中断标识,如果为true并清除中断标识
-###二十八、ThreadLocal
+### 二十八、ThreadLocal
 
  * ThreadLocal
         
         线程本地变量,采用的是空间换时间的策略,每个线程都含有一个map,K为ThreadLocal的实例, V为要存的值
-        使用完必须删除该K,V, 防止内存泄漏        
+        使用完必须删除该K,V, 防止内存泄漏  
+        
+        我们也可以通过该变量来传递参数, 添加一个新的传惨时, 如果代码改动量过大, 我们可以使用ThreadLocal进行传参。
 
-###二十九、FutureTask的工作原理
+### 二十九、FutureTask的工作原理
 
 
 
-###三十、订单30分钟待付款、已付款、保存已取消记录如何设计
+### 三十、订单30分钟待付款、已付款、保存已取消记录如何设计
     
  * 方式一：
         
@@ -753,7 +736,7 @@
         用户支付成功时修改该订单状态为已支付,DelayQueue中删除该消息，发送RocketMQ异步当前状态为已支付
         通过延迟队列发送取消状态,发送RocketMQ
         
-###三十一、RocketMQ
+### 三十一、RocketMQ
 
  * RocketMQ的架构设计
         
@@ -773,7 +756,7 @@
         
         高可用指的是MQ的部署方式
         
-###三十一、http、https、TCP通讯
+### 三十一、http、https、TCP通讯
  
  * 什么是http
         
@@ -834,13 +817,13 @@
         
         
  * 四次挥手        
-###三十二、如何实现微信抢红包
+### 三十二、如何实现微信抢红包
    
  * 实现
         
         https://blog.csdn.net/bjweimengshu/article/details/80045958
         
-###三十三、ArrayList和LinkedList底层原理
+### 三十三、ArrayList和LinkedList底层原理
 
  * ArrayList底层如何实现的、扩容、删除、添加原理
         
@@ -860,7 +843,7 @@
         
        浅拷贝。
        
-###三十三、深拷贝和浅拷贝
+### 三十三、深拷贝和浅拷贝
  
  * 浅拷贝
      
@@ -882,7 +865,7 @@
              User copyUser = objectMapper.readValue(objectMapper.writeValueAsString(user), User.class);
              
 
-###三十四、自定义定时任务线程池(DelayThreadPool)    
+### 三十四、自定义定时任务线程池(DelayThreadPool)    
    
  * 实现
         
@@ -893,7 +876,7 @@
         主要通过延迟队列实现(DelayQueue), 
         队列中的任务体需要实现Delayed接口,同时需要记录定时的时间
         
-###三十五、CPU密集型任务和IO密集型任务
+### 三十五、CPU密集型任务和IO密集型任务
  
  * CPU密集型和IO密集型
         
@@ -902,7 +885,7 @@
         
         计算密集型程序适合C语言多线程，I/O密集型适合脚本语言开发的多线程。
         
-###三十六、分布式事务
+### 三十六、分布式事务
 
  * XA协议和TCC协议的区别
        
@@ -999,7 +982,7 @@
             
             seate会保存每个事务的回滚日志已经行锁,保证该行数据不能被其他事务修改,保证其他服务出错后该服务需要回滚的版本。
             所有事务提交成功后,删除日志和释放行锁。
-###三十七、mvc参数接受
+### 三十七、mvc参数接受
   
  * @RequestBody    
  
@@ -1021,26 +1004,15 @@
         GET产生一个TCP数据包；POST产生两个TCP数据包。
         
         
-###接口设计
+### 接口幂等性如何保证
 
- * 幂等设计
-        
-        同一参数多次请求结果一致。
-        
-        方案:  
-            前端先查询版本号,每次根据版本号区更新。
-            redis对唯一标志(订单号)进行判断。
- 
- * 安全性
-        
-       https或者对数据自行加密
-       
- * 限流机制
-        
-        通过黑名单等防止接口被攻击。 
-        
+ * token机制
+    
+         前端页面再调用后端接口时, 需要传入一个唯一表示, 该标识可以由前端生成, 也可以由后端生成。
+         前端生成：后端数据库需要对该唯一标识进行存储, 通过数据库的唯一索引来保证。
+         后端生成：可以唯一标识存储在redis中并设置过期时间,调用接口进行存在则删除操作,确保只有该操作成功时处理。
                 
-###秒杀系统设计
+### 秒杀系统设计
 
  * 单一职责
         
@@ -1062,15 +1034,54 @@
         数据预热,提前加载至内存。redis超卖回补。
         通过MQ执行
         
-###如何保证数据一致性(两个方面)
+### 如何保证数据一致性(两个方面)
  
  * 缓存一致性
         
         
  * 分布式事务调用
  
-###分布式锁的使用和实现原理
+### 分布式锁的使用和实现原理
  
- * 
+ * 参考redis.md 分布式锁实现
+
+### 常见限流算法(10QPS为例)
+
+ * 固定窗口算法
  
- *
+         固定窗口算法指固定时间内可处理的请求数, 抛弃超出阈值的请求数, 当窗口结束时启动新的窗口。
+         该算法存在两个弊端:
+         1. 处理速率不均匀。
+             比如0～0.5s接收了10个请求, 0.5～1s却不接收任何请求, 系统依旧存在短暂峰值。
+         2. 相邻时间窗口出现限流失效问题。
+             比如0.5～1s接收了10个请求, 1s~1.5s接收了10个请求, 此时两个窗口均正常, 但是0.5s～1.5s接收的请求超过了10,导致限流失败。
+
+ * 滑动窗口算法
+
+         滑动窗口是为了解决固定窗口算法中相邻窗口出现的限流失败问题。规定最近1s内的请求数不超过10个。
+         比如记录每0.1s内的请求数, 统计近1s内的总请求数。
+         
+         滑动窗口虽然解决了固定窗口限流失败的问题, 但是依旧存在处理速率不均匀的问题。
+
+ * 漏桶算法
+
+         漏桶算法指的是通过一个漏桶来表示系统最多可接收的请求, 采用匀速处理的方式处理漏桶中的请求。抛弃漏桶满时的请求。
+         该算法非常适合秒杀场景下的先到先得。漏桶中的请求会存在等待。
+
+ * 令牌桶算法
+
+          令牌桶算法通过生成一批令牌来控制可处理的请求, 只有当请求获取令牌时才可被处理。请求不会等待。
+
+         
+
+
+### 常见的负载均衡算法
+
+* 轮询法
+
+* 加权轮询法
+
+* 最少连接法
+
+* 源地址哈希法
+ 
